// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ColorPicker > Snapshots > matches custom color snapshot 1`] = `
<div
  class="relative "
>
  <button
    aria-label="Test color picker"
    class="justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground [color:hsl(var(--surface-interactive))] [border-color:hsl(var(--surface-interactive))] h-8 rounded-md px-3 text-xs button flex items-center gap-2"
  >
    <div
      class="w-4 h-4 rounded-full border border-border"
      style="background-color: rgb(24, 24, 27);"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-palette w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
      />
      <circle
        cx="13.5"
        cy="6.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="17.5"
        cy="10.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="6.5"
        cy="12.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="8.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      class="hidden sm:inline"
    >
      Brand Color
    </span>
  </button>
</div>
`;

exports[`ColorPicker > Snapshots > matches default snapshot 1`] = `
<div
  class="relative "
>
  <button
    aria-label="Test color picker"
    class="justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground [color:hsl(var(--surface-interactive))] [border-color:hsl(var(--surface-interactive))] h-8 rounded-md px-3 text-xs button flex items-center gap-2"
  >
    <div
      class="w-4 h-4 rounded-full border border-border"
      style="background-color: rgb(24, 24, 27);"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-palette w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
      />
      <circle
        cx="13.5"
        cy="6.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="17.5"
        cy="10.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="6.5"
        cy="12.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="8.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      class="hidden sm:inline"
    >
      Brand Color
    </span>
  </button>
</div>
`;

exports[`ColorPicker > Snapshots > matches disabled state snapshot 1`] = `
<div
  class="relative "
>
  <button
    aria-label="Test color picker"
    class="justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground [color:hsl(var(--surface-interactive))] [border-color:hsl(var(--surface-interactive))] h-8 rounded-md px-3 text-xs button flex items-center gap-2"
    disabled=""
  >
    <div
      class="w-4 h-4 rounded-full border border-border"
      style="background-color: rgb(24, 24, 27);"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-palette w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
      />
      <circle
        cx="13.5"
        cy="6.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="17.5"
        cy="10.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="6.5"
        cy="12.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="8.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      class="hidden sm:inline"
    >
      Brand Color
    </span>
  </button>
</div>
`;

exports[`ColorPicker > Snapshots > matches with className snapshot 1`] = `
<div
  class="relative custom-class"
>
  <button
    aria-label="Test color picker"
    class="justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground [color:hsl(var(--surface-interactive))] [border-color:hsl(var(--surface-interactive))] h-8 rounded-md px-3 text-xs button flex items-center gap-2"
  >
    <div
      class="w-4 h-4 rounded-full border border-border"
      style="background-color: rgb(24, 24, 27);"
    />
    <svg
      aria-hidden="true"
      class="lucide lucide-palette w-4 h-4"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 22a1 1 0 0 1 0-20 10 9 0 0 1 10 9 5 5 0 0 1-5 5h-2.25a1.75 1.75 0 0 0-1.4 2.8l.3.4a1.75 1.75 0 0 1-1.4 2.8z"
      />
      <circle
        cx="13.5"
        cy="6.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="17.5"
        cy="10.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="6.5"
        cy="12.5"
        fill="currentColor"
        r=".5"
      />
      <circle
        cx="8.5"
        cy="7.5"
        fill="currentColor"
        r=".5"
      />
    </svg>
    <span
      class="hidden sm:inline"
    >
      Brand Color
    </span>
  </button>
</div>
`;
